--- a/Bootstrap/css/bootstrap.css
+++ b/Bootstrap/css/bootstrap.css
@@ -4622,8 +4622,8 @@ input[type="button"].btn-block {
 
 .card-footer {
   padding: 0.75rem 1.25rem;
-  background-color: rgba(0, 0, 0, 0.03);
-  border-top: 1px solid rgba(0, 0, 0, 0.125);
+  background-color: #343a40);
+  border-top:;
 }
 
 .card-footer:last-child {
